[project]
name = "esa-exporter"
version = "0.1.0"
authors = [
    { name = "itochs", email = "halglobe0108@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[project.scripts]
esa-exporter = "esa_exporter.cli.__main__:main"
